// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarButton render with site title 1`] = `
<div
  class="sidebar-button"
>
  <svg
    aria-hidden="true"
    class="icon"
    height="20px"
    role="img"
    viewBox="0 0 25 20"
    width="25px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Hamburger menu button
    </title>
     
    <g
      transform="translate(-22.000000, -2.000000)"
    >
      <g
        transform="translate(22.000000, 2.545974)"
      >
        <path
          d="M24.7714844,0.5 L0,0.5"
        />
         
        <path
          d="M24.7714844,9.72701303 L0,9.72701303"
        />
         
        <path
          d="M24.7714844,18.9540261 L0,18.9540261"
        />
      </g>
    </g>
  </svg>
   
  <router-link-stub
    class="home-link"
  >
    <span
      class="site-name can-hide"
    >
      Ethereum
    </span>
  </router-link-stub>
</div>
`;

exports[`SidebarButton render without site title 1`] = `
<div
  class="sidebar-button"
>
  <svg
    aria-hidden="true"
    class="icon"
    height="20px"
    role="img"
    viewBox="0 0 25 20"
    width="25px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Hamburger menu button
    </title>
     
    <g
      transform="translate(-22.000000, -2.000000)"
    >
      <g
        transform="translate(22.000000, 2.545974)"
      >
        <path
          d="M24.7714844,0.5 L0,0.5"
        />
         
        <path
          d="M24.7714844,9.72701303 L0,9.72701303"
        />
         
        <path
          d="M24.7714844,18.9540261 L0,18.9540261"
        />
      </g>
    </g>
  </svg>
   
  <router-link-stub
    class="home-link"
  >
    <!---->
  </router-link-stub>
</div>
`;
